[gd_scene load_steps=10 format=3 uid="uid://b5qebaxc55f4r"]

[ext_resource type="Script" path="res://Entities/LevelObstacles/animate_spikes.gd" id="1_v0l2m"]
[ext_resource type="Texture2D" uid="uid://cs3gb2w7o12jo" path="res://Entities/LevelObstacles/Obstacle_Assets/animatedSpriteSpikes.png" id="1_w2nk3"]
[ext_resource type="AudioStream" uid="uid://ctbdfncpwy4pf" path="res://Sounds/SFX/SE_BTL_KP_GUARD.wav" id="3_2q1wq"]

[sub_resource type="Animation" id="Animation_qwdwh"]
resource_name = "Active"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_ld5oe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0jbm8"]
resource_name = "Spikes_Animation"
length = 2.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0666667, 0.0333333, 0.233333, 0.266667, 0.366667, 0.466667, 1.9, 1.96667, 2.03333, 2.13333, 2.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(5, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(2, 0), Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.266667, 2, 2.03333, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false, true, true]
}

[sub_resource type="Animation" id="Animation_7eeld"]
resource_name = "going_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.266667, 0.366667, 0.699997),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(2, 0), Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_2nato"]
resource_name = "inactive"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitbox_Collision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7romn"]
_data = {
"Active": SubResource("Animation_qwdwh"),
"RESET": SubResource("Animation_ld5oe"),
"Spikes_Animation": SubResource("Animation_0jbm8"),
"going_down": SubResource("Animation_7eeld"),
"inactive": SubResource("Animation_2nato")
}

[node name="AnimateSpikes" type="Area2D" groups=["Traps"]]
monitorable = false
script = ExtResource("1_v0l2m")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3.75223, 4)
scale = Vector2(1.14853, 1.5)
texture = ExtResource("1_w2nk3")
hframes = 7

[node name="hitbox_Collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(3, -4, 13, 16, -6, 16)
disabled = true

[node name="AnimatedSpikes" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7romn")
}

[node name="Trigger" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2q1wq")
volume_db = -22.0
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_animated_Spikes_entered"]
[connection signal="animation_finished" from="AnimatedSpikes" to="." method="_on_animated_spikes_animation_finished"]
[connection signal="ready" from="AnimatedSpikes" to="." method="_on_animated_spikes_ready"]
